[package]
name = "host"
version = "0.1.0"
authors = ["Frangen, Leon <lesoftware@proton.me>"]
edition = "2024"

[dependencies]
critical-section = "1.2.0"
circular-buffer = { version = "1.1.0", default-features = false}
defmt = "0.3.10"
defmt-rtt = "0.4.1"
embedded-io = "0.6.1"
zerocopy = "0.8"
zerocopy-derive = "0.8"