[package]
name = "tf-luna-rs"
version = "0.1.0"
authors = ["Frangen, Leon <lesoftware@proton.me>"]
edition = "2024"
description = "A driver implementation for the lidar TF Luna from Benewake"
repository = "https://github.com/mauzigoe/tf-luna-rs"
license = "GPL-3.0"

[dependencies]
critical-section = "1.2.0"
circular-buffer = { version = "1.1.0", default-features = false, features = ["embedded-io"]}
defmt = "0.3.10"
defmt-rtt = "0.4.1"
embedded-io = "0.6.1"
zerocopy = "0.8"
zerocopy-derive = "0.8"